compiler/typ/tests/fixtures/diagnostics/0313_fun_self_application_08.ml
let bad_theta x = x x
